# stonks

./: .gitignore  ARIMA.ipynb  LICENSE  LSTM.ipynb  README.md  create_admin.py  create_db.py  forecasts.py  get_initial_data.py  pyproject.toml  requirements.txt  run.bat  run.sh  top50_stocks.py  wsgi.py
migrations/versions/: 0d18e7e5d6d4_add_users_data_table.py  47627e51fa32_added_email_to_user.py  5afea7fc8eb5_add_favourites_model.py  63b7e055decf_change_user_email_to_joined_at.py  98eeb9219296_users_and_historical_data_tables.py  b8289f8849f5_added_firstname_lastname_email_to_user.py
stonks_app/: __init__.py  datamodel.py  graph.py  routes.py  utils.py
stonks_app/static/js/: scripts.js
stonks_app/stonk/: __init__.py  models.py  views.py
stonks_app/templates/: 404.html  home.html  layout.html  login.html  messages.html  navigation.html  plotlygraphs.html  tickers.html
stonks_app/templates/stonk/: plotlygraphs.html  tickers.html
stonks_app/templates/user/: favourites.html  login.html  register.html  registration.html
stonks_app/user/: __init__.py  forms.py  models.py  views.py
tests/: test_stonks_app.py
