[tool.poetry]
name = "stonks-app"
version = "0.1.0"
description = ""
authors = ["s0ulo, ornit0log, boris-al"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/s0ulo/stonks.git"
documentation = "https://docs.google.com/document/d/1hyo6X5697rYHlifO1heI5EU1dFaANa5ReJGqzG-3EAg/edit#heading=h.isis4v44w3vv"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
certifi = "==2020.6.20"
chardet = "==3.0.4"
click = "==7.1.2"
flake8 = "^3.8"
idna = "==2.10"
itsdangerous = "==1.1.0"
Jinja2 = "==2.11.2"
MarkupSafe = "==1.1.1"
mccabe = "==0.6.1"
plotly = "^4.10"
pycodestyle = "==2.6.0"
pyflakes = "==2.2.0"
requests = "==2.24.0"
retrying = "==1.3.3"
six = "==1.15.0"
urllib3 = "==1.25.10"
Werkzeug = "==1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
