[tool.poetry]
name = "stonks-app"
version = "0.1.0"
description = ""
authors = ["s0ulo, ornit0log, boris-al"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/s0ulo/stonks.git"
documentation = "https://docs.google.com/document/d/1hyo6X5697rYHlifO1heI5EU1dFaANa5ReJGqzG-3EAg/edit#heading=h.isis4v44w3vv"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
plotly = "^4.10"
requests = "^2.24"
flask-sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[tool.poetry.scripts]
run = "wsgi:app"
[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

